--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile-less-core": "./node_modules/.bin/lessc --relative-urls --rootpath=../../src/less/ src/less/uikit.less > dist/css/uikit-core.css",
     "compile-less-theme": "./node_modules/.bin/lessc --relative-urls --rootpath=../../src/less/ src/less/uikit.theme.less > dist/css/uikit.css",
     "images": "node build/images",
-    "compile-rtl": "npm run compile-less && node build/rtl-before && npm run compile-less && node build/rtl-after",
+    "compile-rtl": "node build/rtl && node build/css-minify",
     "compile-js": "node build/build && node build/all",
     "compile": "npm run compile-less && npm run compile-js",
     "release": "npm run compile && node build/release",
@@ -32,6 +32,7 @@
     "rollup": "^0.34.13",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-node-resolve": "1.7.0",
+    "rtlcss": "^2.1.2",
     "uglify-js": "^2.7.3",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0"
