removed svgs from dist folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 !/dist/css/uikit.css
 !/dist/css/uikit.min.css
 !/dist/images
-!/dist/images/*
+/dist/images/*
+!/dist/images/icons.svg
 !/dist/js/
 /dist/js/*
 !/dist/js/uikit.js
