--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 !/dist/css/
 /dist/css/*
 !/dist/css/uikit.css
+!/dist/css/uikit.rtl.css
 !/dist/css/uikit.min.css
+!/dist/css/uikit.rtl.min.css
 !/dist/images
 /dist/images/*
 !/dist/images/icons.svg
