Fix npm not watching less (Fixes #2415)

--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   },
   "watch": {
     "compile-js": "src/js/**/*.js",
-    "compile-less": "**/*.less"
+    "compile-less": {
+      "patterns": "**/*.less",
+      "extensions": "less"
+    }
   }
 }
