--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "version": "3.0.0-beta.12",
   "main": "dist/js/uikit.js",
   "scripts": {
-    "compile-less": "mkdir dist & mkdir dist/css & npm run compile-less-core && npm run compile-less-theme && node build/less && node build/css-minify",
-    "compile-less-core": "./node_modules/.bin/lessc --relative-urls --rootpath=../../src/less/ src/less/uikit.less > dist/css/uikit-core.css",
-    "compile-less-theme": "./node_modules/.bin/lessc --relative-urls --rootpath=../../src/less/ src/less/uikit.theme.less > dist/css/uikit.css",
-    "icons": "node build/icons",
-    "compile-rtl": "node build/rtl && node build/css-minify",
-    "compile-js": "node build/icons && node build/build && node build/all",
     "compile": "npm run compile-less && npm run compile-js",
-    "release": "npm run compile && npm run compile-rtl && node build/release",
+    "compile-js": "node build/build",
+    "compile-less": "node build/less",
+    "compile-rtl": "node build/rtl",
+    "icons": "node build/icons",
     "prefix": "node build/prefix",
-    "scope": "node build/scope && node build/css-minify",
+    "scope": "node build/scope",
+    "release": "npm run compile && npm run compile-rtl && node build/release",
     "watch": "npm-watch",
     "test": "webpack-dev-server --inline --hot && open http://localhost:8080/tests/"
   },
@@ -22,12 +20,13 @@
     "archiver": "^1.3.0",
     "buble": "^0.15.1",
     "buble-loader": "^0.4.0",
-    "clean-css": "^3.4.23",
-    "concat-files": "^0.1.1",
+    "clean-css": "^4.0.8",
+    "concat": "^3.0.0",
     "glob": "^7.0.3",
     "jquery": "^3.1.1",
     "less": "^2.7.1",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "npm-watch": "^0.1.7",
     "rollup": "^0.34.13",
     "rollup-plugin-buble": "^0.15.0",
