--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean-css": "^4.0.8",
     "concat": "^3.0.0",
     "glob": "^7.0.3",
+    "html-loader": "^0.4.5",
     "jquery": "^3.1.1",
     "less": "^2.7.1",
     "minimist": "^1.2.0",
@@ -30,6 +31,7 @@
     "npm-watch": "^0.1.7",
     "rollup": "^0.34.13",
     "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-import-alias": "^1.0.3",
     "rollup-plugin-json": "^2.1.0",
     "rollup-plugin-node-resolve": "1.7.0",
