--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "npm-watch": "^0.1.7",
+    "postcss": "^5.2.15",
     "rollup": "^0.34.13",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-html": "^0.2.1",
