--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 !/dist/css/
 /dist/css/*
 !/dist/css/uikit.css
-!/dist/css/uikit.rtl.css
 !/dist/css/uikit.min.css
-!/dist/css/uikit.rtl.min.css
+!/dist/css/uikit-rtl.css
+!/dist/css/uikit-rtl.min.css
 !/dist/js/
 /dist/js/*
 !/dist/js/uikit.js
