--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uikit",
+  "name": "uikit-customization",
   "title": "UIkit",
   "description": "UIkit is a lightweight and modular front-end framework for developing fast and powerful web interfaces.",
   "version": "3.0.0-beta.25",
