--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uikit-customization",
   "title": "UIkit",
   "description": "UIkit is a lightweight and modular front-end framework for developing fast and powerful web interfaces.",
-  "version": "3.0.0-beta.25",
+  "version": "3.0.0-beta.25-0.1",
   "main": "dist/js/uikit.js",
   "style": "dist/css/uikit.css",
   "scripts": {
